--- a/index.html
+++ b/index.html
@@ -198,11 +198,11 @@ display: block;
     </section>
     <ul class="main-menu">
       <div class="navbar">
-        <a href="/index.html">Home</a>
-        <a href="/about">About</a>
+        <a href="index.html">Home</a>
+        <a href="about.html">About</a>
         <a href=''>Picos App</a>
-        <a href='/staff.html'>Crew</a>
-        <a href='/contribute.html'>Contribute</a>
+        <a href='staff.html'>Crew</a>
+        <a href='contribute.html'>Contribute</a>
         <div class="dropdown">
           <button class="dropbtn">Guides
             <i class="fa fa-caret-down"></i>
