--- a/index.html
+++ b/index.html
@@ -229,7 +229,9 @@ display: block;
             <a href="#">Espanol</a>
             <a href="#">Greek</a>
           </div>
+          
         </div>
+        <a href='contactus.html'>Contact Us</a>
       </div>
       
     </ul>
