--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 body {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    background: url("https://mir-s3-cdn-cf.behance.net/project_modules/max_1200/41810341995087.57bd505fc7b34.gif");
+    background: url("https://i.gifer.com/embedded/download/IWuP.gif");
     background-repeat: no-repeat;
     background-size: cover;
     color: rgb(255, 255, 255);
@@ -195,7 +195,7 @@ display: block;
 }
 
 </style>
-
+<audio src="Clair de Lune.mp3" autoplay loop></audio>
   <div class="container">
   <!-- Nav -->
   <nav class="main-nav">
