--- a/index.html
+++ b/index.html
@@ -1,16 +1,93 @@
 <!doctype html>
 <html>
   <style>
-
+$duration: 12;
+html, body {
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+}
 body {
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    background: url("https://i.imgur.com/xQxHjAK.gif");
-    background-repeat: no-repeat;
-    background-size: cover;
-    color: rgb(255, 255, 255);
-    font-size: 15px;
-    line-height: 1.5;
+  background: #000;
+  text-align: center;
+  &::before {
+    content: '';
+    display: inline-block;
+    height: 100%;
+    vertical-align: middle;
   }
+}
+.scene {
+  position: relative;
+  display: inline-block;
+  vertical-align: middle;
+  perspective: 15px;
+  perspective-origin: 50% 50%;
+}
+.wrap {
+  position: absolute;
+  width: 1000px;
+  height: 1000px;
+  left: -500px;
+  top: -500px;
+  transform-style: preserve-3d;
+  animation: move #{$duration}s infinite linear;
+  animation-fill-mode: forwards;
+}
+.wrap:nth-child(2) {
+  animation: move #{$duration}s infinite linear;
+  animation-delay: 6s;
+}
+.wall {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  background: url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/18515/PIA09959-1280x800_copy.jpg);
+  background-size: cover;
+  opacity: 0;
+  animation: fade #{$duration}s infinite linear;
+}
+.wrap:nth-child(2) .wall {
+  animation-delay: #{$duration / 2}s;
+}
+.wall-right {
+  transform: rotateY(90deg) translateZ(500px);
+}
+.wall-left {
+  transform: rotateY(-90deg) translateZ(500px);
+}
+.wall-top {
+  transform: rotateX(90deg) translateZ(500px);
+}
+.wall-bottom {
+  transform: rotateX(-90deg) translateZ(500px);
+}
+.wall-back {
+  transform: rotateX(180deg) translateZ(500px);
+}
+@keyframes fade {
+  0% {
+    opacity: 0;
+  }
+  25% {
+    opacity: 1;
+  }
+  75% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
+}
+@keyframes move {
+  0% {
+    transform: translateZ(-500px) rotate(0deg);
+  }
+  100% {
+    transform: translateZ(500px) rotate(0deg);
+  }
+}
+
 
 .container {
     width: 90%;
@@ -19,6 +96,14 @@ body {
     
 }
   </style>
+  .scene
+  - for (var i = 0; i < 2; i++)
+    .wrap
+      .wall.wall-right
+      .wall.wall-left
+      .wall.wall-top
+      .wall.wall-bottom
+      .wall.wall-back
   <head>
     <meta charset="utf-8">
     <title>Home</title>
